Add multiple methods to assist in conversion of artworks to standardized format; add rate limiter to control number of API calls